--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -13,7 +13,7 @@
             <a class="nav-link" href="/eventos" th:href="@{/eventos}">Eventos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/perfil" th:href="@{/perfil}">Mi perfil</a>
+            <a class="nav-link" href="/profile" th:href="@{/profile}">Mi perfil</a>
           </li>
 
           <li class="nav-item ms-lg-2">
