--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -60,7 +60,7 @@
             </div>
             <form th:action="@{/login}" method="post">
               <div class="mb-3">
-                <label for="username" class="form-label">Nombre de Usuario</label>
+                <label for="username" class="form-label">Usuario</label>
                 <input type="text" class="form-control" id="username" name="username" required>
               </div>
               <div class="mb-3">
